<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048 Battles</string>
    <string name="intro">Welcome to 2048!</string>
    <string name="creator_name">Made By Tyler Carberry</string>
    <string name="action_settings">Settings</string>
    <string name="how_to_play">How To Play</string>
    <string name="action_stats">Game Stats</string>
    <string name="action_powerups">Powerups</string>
    <string name="action_achievements">Achievements</string>
    <string name="action_leaderboards">Leaderboards</string>
    <string name="action_quests">Quests</string>
    <string name="instructions_to_play">Swipe to move the board.\nSame value tiles combine.\nReach a 2048 tile to win.</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="restart">Restart</string>
    <string name="autoplay">Autoplay</string>
    <string name="auto_random">Random</string>
    <string name="auto_corner">Corner</string>
    <string name="auto_circle">Circle</string>
    <string name="auto_recursive">Recursive</string>
    <string name="mode_normal">Classic</string>
    <string name="mode_practice">Practice</string>
    <string name="mode_pro">Pro</string>
    <string name="mode_rush">Rush</string>
    <string name="mode_survival">Survival</string>
    <string name="mode_x">XMode</string>
    <string name="mode_corner">Corner</string>
    <string name="mode_arcade">Arcade</string>
    <string name="mode_speed">Speed</string>
    <string name="mode_zen">Zen</string>
    <string name="mode_ghost">Ghost</string>
    <string name="mode_crazy">Crazy</string>
    <string name="mode_custom">Custom</string>
    <string name="mode_multiplayer">Multiplayer</string>
    <string name="try_again">Try Again</string>
    <string name="mode_desc_normal">The classic game of 2048.</string>
    <string name="mode_desc_practice">Unlimited powerups and undos</string>
    <string name="mode_desc_pro">No Undos\nNo Powerups</string>
    <string name="mode_desc_rush">Higher value tiles appear</string>
    <string name="mode_desc_survival">Time limit, combine tiles for more time</string>
    <string name="mode_desc_x">X tile cannot be combined</string>
    <string name="mode_desc_corner">Immovable tiles in the corner</string>
    <string name="mode_desc_speed">Tiles appear every second.</string>
    <string name="mode_desc_zen">All tiles combine. Impossible to lose. **Coming Soon**</string>
    <string name="mode_desc_crazy">A 5x5 grid with every other mode enabled</string>
    <string name="mode_desc_ghost">All tiles appear as ?</string>
    <string name="mode_desc_arcade">Random powerups and attacks</string>
    <string name="mode_desc_custom">Change everything about the game</string>
    <string name="mode_desc_multiplayer">Multiplayer description here</string>
    <string name="title_activity_game">2048</string>
    <string name="title_activity_settings">Settings</string>
    <string name="remove_low">Remove Low Tiles</string>
    <string name="remove_tile">Remove A Tile</string>
    <string name="prompt_start_game">Start A New Game</string>
    <string name="turn">Turn</string>
    <string name="score">Score</string>
    <string name="undo">Undo</string>
    <string name="powerup">Powerup</string>
    <string name="shuffle">Shuffle</string>
    <string name="undo_remaining">Undos Left</string>
    <string name="move_remaining">Moves Left</string>
    <string name="time_remaining">Time Left</string>
    <string name="powerups_remaining">Powerups Left</string>
    <string name="you_lost">You Lost</string>
    <string name="slow">Slow</string>
    <string name="medium">Medium</string>
    <string name="fast">Fast</string>
    <string name="no_animation">No Animation</string>
    <string name="title_activity_info">How To Play</string>
    <string name="title_activity_stats">Game Stats</string>
    <string name="game_stats">Game Stats</string>
    <string name="total_games">Total Games Lost</string>
    <string name="total_undos">Total Undos</string>
    <string name="total_shuffles">Total Shuffles</string>
    <string name="total_moves">Total Moves</string>
    <string name="high_score">High Score: %1$d</string>
    <string name="highest_tile">Highest Tile: %1$d</string>
    <string name="lowest_score">Lowest Score</string>
    <string name="new_high_score">New High Score: %1$d</string>
    <string name="new_high_tile">New Highest Tile: %1$d</string>
    <string name="new_low_score">New Lowest Score: %1$d</string>
    <string name="final_score">Final Score: %1$d</string>
    <string name="share_intent_high_tile_message">I just reached a %1$d tile in 2048 Battles. Try to beat me!</string>
    <string name="share_intent_message">I am playing to 2048 Battles. Try to beat my high score!</string>
    <string name="prompt_choose_powerup">Choose Powerup</string>
    <string name="prompt_choose_gift">Send Gift</string>
    <string name="not_signed_in_error">You must be signed in to access Play Games</string>
    <string name="continue_game">Continue Game</string>
    <string name="share">Share</string>
    <string name="start_new_game">New Game</string>
    <string name="sign_out">Sign Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="error_can_not_save">Error: The game cannot be saved</string>
    <string name="x_attack_active">X Attack Active for %1$d turns</string>
    <string name="ghost_attack_active">Ghost Attack Active for %1$d turns</string>
    <string name="ice_attack_active">Can\'t move %1$s for %2$d turns</string>
    <string name="start_game">Start Game</string>
    <string name="title_activity_custom_icon">Customize Tile Icons</string>
    <string name="about">About</string>
    <string name="title_activity_multiplayer">Multiplayer</string>
    <string name="title_activity_main">2048</string>
    <string name="powerup_gift_received">%1$s sent you a powerup</string>
    <string name="undo_gift_received">%1$s sent you an undo</string>
    <string name="error_claim_gift">Unable to claim gift. Try again later.</string>
    <string name="error_send_gift">Unable to send gift. Try again later.</string>
    <string name="error_send_request">Unable to send request. Try again later.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="error_claim_bonus">Unable to claim bonus. Try again later.</string>
    <string name="error_login">Unable to login</string>
    <string name="quest_completed">Quest Completed</string>
    <string name="opponent_lost">Your opponent has lost</string>
    <string name="random_shuffle">Random Shuffle</string>
    <string name="open_source">This app is open source.\nTap to see the code.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="title_activity_custom_game">CustomGameActivity</string>
    <string name="error_grid_small">The grid is too small</string>
    <string name="grid_size">Grid Size</string>
    <string name="create_custom_game">Start</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer_quick_game">Quick Game</string>
    <string name="reset_game_dialog_title">Reset Game?</string>
    <string name="reset_game">Reset Game</string>
    <string name="reset_warning">This cannot be undone</string>
    <string name="game_mode">Game Mode</string>
    <string name="creating_multiplayer_game">Starting Multiplayer Game</string>
    <string name="error_create_multiplayer_game">Cannot start multiplayer game</string>
    <string name="ask_restart_game">Restart Game?</string>
    <string name="dont_ask_again">Don\'t ask me again</string>
    <string name="hide_indentity">Hide Identity in Multiplayer</string>
    <string name="ask_before_restarting">Ask Before Restarting Game</string>
    <string name="swipe_sensitivity">Swipe Sensitivity</string>
    <string name="tile_slide_speed">Tile Slide Speed</string>
    <string name="time_is_up">Time Is Up</string>
    <string name="win_multiplayer">YOU WIN!</string>
    <string name="tie_multiplayer">It\'s A Tie!</string>
    <string name="lose_multiplayer">You Lose</string>
    <string name="rematch">Rematch</string>
    <string name="leave_game">Leave Game</string>
    <string name="opponent_left_game">Your opponent has left the game</string>
    <string name="rematch_button_pressed">Requested Rematch. Continue playing while waiting for your opponent.</string>
    <string name="everybody_left_game">Everybody has left the game</string>
    <string name="multiplayer_recieved_attack">You\'ve been attacked!</string>
    <string name="title_continue_game">Continue Game?</string>
    <string name="signed_in_google_play_games">You are signed into Google Play Games</string>
    <string name="google_play_games">Google Play Games</string>
    <string name="game_modes">Game Modes</string>
    <string name="me">Me</string>
    <string name="opponent">Opponent</string>
    <string name="inventory">Inventory</string>
    <string name="multiplayer_cant_move">You cannot move. Use a powerup to continue.</string>
    <string name="continue_playing">Continue Playing</string>
    <string name="share_high_score">Brag</string>
    <string name="tile_reached">%1$d Tile Reached!</string>
    <string name="no_powerups_short">No more powerups</string>
    <string name="no_powerups_long">There are no powerups remaining</string>
    <string name="bonus_undo">Bonus! +1 Undo</string>
    <string name="bonus_powerup">Bonus! +1 Powerup</string>
    <string name="confirm_moving_direction">Moving %1$s might cause you to lose</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="theme_custom">Custom</string>
    <string name="themes">Themes</string>
    <string name="quest_reward_undos">You gained %1$d undos</string>
    <string name="quest_reward_powerups">You gained %1$d powerups</string>
    <string name="user_changed_date">The date was changed</string>
    <string name="daily_bonus_undo">You gained an undo. Come back tomorrow for more.</string>
    <string name="daily_bonus_powerup">You gained a powerup. Come back tomorrow for more.</string>
    <string name="confirm_leave_multiplayer_game">Leave Multiplayer Game?</string>
    <string name="player">Player</string>
    <string name="share_title">Share game with</string>
    <string name="not_signed_in_multiplayer">You must be signed in to access multiplayer</string>


</resources>