<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/instructions_to_play"
        android:gravity="center"/>

    <VideoView
        android:id="@+id/how_to_play_videoview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/open_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_source"
        android:gravity="center"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/creator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/creator_name"
        android:gravity="center"/>

</LinearLayout>