<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.app_2048.MainActivity" >
    
    <item
        android:id="@+id/action_how_to_play"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_how_to_play"/>
    
    <item
        android:id="@+id/action_stats"
        android:orderInCategory="150"
        android:showAsAction="never"
        android:title="@string/action_stats"/>

    <item
        android:id="@+id/action_set_icons"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="Set Icon"/>

    <item
        android:id="@+id/action_reset_game"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="Reset Game"/>


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/about"/>



</menu>
